--- a/web/lukaHotel/index.html
+++ b/web/lukaHotel/index.html
@@ -48,12 +48,19 @@
       <table>
          <thead>
             <tr>
+               <td>SN.</td>
                <td>name</td>
                <td>price</td>
             </tr>
          </thead>
          <tbody>
             <tr>
+               <td>SN.</td>
+               <td>asfd</td>
+               <td>200</td>
+            </tr>
+            <tr>
+               <td>SN.</td>
                <td>asfd</td>
                <td>200</td>
             </tr>
