--- a/web/lukaHotel/index.html
+++ b/web/lukaHotel/index.html
@@ -16,7 +16,7 @@
          <li class="small-mid-text"><a href="#hero">home</a></li>
          <li class="small-mid-text"><a href="#pricing">pricing</a></li>
          <li class="small-mid-text"><a href="#pricing">image</a></li>
-         <li class="small-mid-text"><a href="">menu</a></li>
+         <li class="small-mid-text"><a href="#food-menu">food-menu</a></li>
       </ul>
    </div>
    <div id="hero" class="hero">
@@ -40,29 +40,33 @@
          </ol>
       </div>
    </div>
-   <div id="image" class="section">
-      <img class="two-col-img" src="image/bed.jpg" alt="bed">
-      <img class="two-col-img" src="image/room.jpg" alt="room">
+   <div id="image" class="section-verticle">
+      <h2>food menu</h2>
+      <div class="flex">
+         <img class="two-col-img" src="image/bed.jpg" alt="bed">
+         <img class="two-col-img" src="image/room.jpg" alt="room">
+      </div>
    </div>
-   <div class="section">
+   <div id="food-menu" class="section-verticle">
+      <h2>food menu</h2>
       <table>
          <thead>
             <tr>
-               <td>SN.</td>
-               <td>name</td>
-               <td>price</td>
+               <th class="table-SN"><b>SN.</b></th>
+               <th><b>Name</b></th>
+               <th><b>price</b></th>
             </tr>
          </thead>
          <tbody>
             <tr>
-               <td>SN.</td>
-               <td>asfd</td>
-               <td>200</td>
+               <td>1.</td>
+               <td>samosa</td>
+               <td>Rs. 20</td>
             </tr>
             <tr>
-               <td>SN.</td>
-               <td>asfd</td>
-               <td>200</td>
+               <td>2.</td>
+               <td>momo</td>
+               <td>Rs. 100</td>
             </tr>
          </tbody>
       </table>
